// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`click option 1`] = `
<div class="van-dropdown-menu van-hairline--top-bottom">
  <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title" style=""><div class="van-ellipsis">B</div></span></div>
  <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title"><div class="van-ellipsis">B</div></span></div>
  <div class="van-dropdown-item van-dropdown-item--down" style="z-index: 10; top: 0px;">
    <div class="van-popup van-popup--top van-dropdown-item__content" style="transition-duration: 0.2s; display: none; z-index: 2011;" name="van-popup-slide-top">
      <div class="van-cell van-cell--clickable" style="">
        <div class="van-cell__title"><span>A</span></div>
      </div>
      <div class="van-cell van-cell--clickable" style="color: rgb(25, 137, 250);">
        <div class="van-cell__title"><span>B</span></div>
        <div class="van-cell__value"><i class="van-icon van-icon-success van-dropdown-item__icon" style="color: rgb(25, 137, 250);">
            <!----></i></div>
      </div>
    </div>
  </div>
  <div class="van-dropdown-item van-dropdown-item--down" style="z-index: 10; top: 0px; display: none;">
    <!---->
  </div>
</div>
`;

exports[`close-on-click-outside 1`] = `
<div class="van-dropdown-menu van-hairline--top-bottom">
  <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title" style=""><div class="van-ellipsis">A</div></span></div>
  <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title"><div class="van-ellipsis">A</div></span></div>
  <div class="van-dropdown-item van-dropdown-item--down" style="z-index: 10; top: 0px;">
    <div class="van-overlay" style="z-index: 2006; position: absolute; animation-duration: 0.2s; display: none;" name="van-fade"></div>
    <div class="van-popup van-popup--top van-dropdown-item__content" style="transition-duration: 0.2s; display: none;" name="van-popup-slide-top">
      <div class="van-cell van-cell--clickable" style="color: rgb(25, 137, 250);">
        <div class="van-cell__title"><span>A</span></div>
        <div class="van-cell__value"><i class="van-icon van-icon-success van-dropdown-item__icon" style="color: rgb(25, 137, 250);">
            <!----></i></div>
      </div>
      <div class="van-cell van-cell--clickable">
        <div class="van-cell__title"><span>B</span></div>
      </div>
    </div>
  </div>
  <div class="van-dropdown-item van-dropdown-item--down" style="z-index: 10; top: 0px; display: none;">
    <!---->
  </div>
</div>
`;

exports[`destroy one item 1`] = `
<div class="van-dropdown-menu van-hairline--top-bottom">
  <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title"><div class="van-ellipsis">A</div></span></div>
  <!---->
  <div class="van-dropdown-item van-dropdown-item--down" style="z-index: 10; top: 0px; display: none;">
    <!---->
  </div>
</div>
`;

exports[`didn\`t find matched option 1`] = `
<div class="van-dropdown-menu van-hairline--top-bottom">
  <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title"><div class="van-ellipsis"></div></span></div>
  <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title"><div class="van-ellipsis"></div></span></div>
  <div class="van-dropdown-item van-dropdown-item--down" style="z-index: 10; top: 0px; display: none;">
    <!---->
  </div>
  <div class="van-dropdown-item van-dropdown-item--down" style="z-index: 10; top: 0px; display: none;">
    <!---->
  </div>
</div>
`;

exports[`direction up 1`] = `
<div class="van-dropdown-menu van-hairline--top-bottom">
  <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title van-dropdown-menu__title--down"><div class="van-ellipsis">A</div></span></div>
  <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title van-dropdown-menu__title--down"><div class="van-ellipsis">A</div></span></div>
  <div class="van-dropdown-item van-dropdown-item--up" style="z-index: 10; bottom: 0px; display: none;">
    <!---->
  </div>
  <div class="van-dropdown-item van-dropdown-item--up" style="z-index: 10; bottom: 0px; display: none;">
    <!---->
  </div>
</div>
`;

exports[`disable close-on-click-outside 1`] = `
<div class="van-dropdown-menu van-hairline--top-bottom">
  <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title van-dropdown-menu__title--down" style="color: rgb(25, 137, 250);"><div class="van-ellipsis">A</div></span></div>
  <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title"><div class="van-ellipsis">A</div></span></div>
  <div class="van-dropdown-item van-dropdown-item--down" style="z-index: 10; top: 0px;">
    <div class="van-overlay" style="z-index: 2008; position: absolute; animation-duration: 0.2s;" name="van-fade"></div>
    <div class="van-popup van-popup--top van-dropdown-item__content" style="transition-duration: 0.2s;" name="van-popup-slide-top">
      <div class="van-cell van-cell--clickable" style="color: rgb(25, 137, 250);">
        <div class="van-cell__title"><span>A</span></div>
        <div class="van-cell__value"><i class="van-icon van-icon-success van-dropdown-item__icon" style="color: rgb(25, 137, 250);">
            <!----></i></div>
      </div>
      <div class="van-cell van-cell--clickable">
        <div class="van-cell__title"><span>B</span></div>
      </div>
    </div>
  </div>
  <div class="van-dropdown-item van-dropdown-item--down" style="z-index: 10; top: 0px; display: none;">
    <!---->
  </div>
</div>
`;

exports[`disable dropdown item 1`] = `
<div class="van-dropdown-menu van-hairline--top-bottom">
  <div role="button" tabindex="-1" class="van-dropdown-menu__item van-dropdown-menu__item--disabled"><span class="van-dropdown-menu__title"><div class="van-ellipsis">A</div></span></div>
  <div class="van-dropdown-item van-dropdown-item--down" style="z-index: 10; top: 0px; display: none;">
    <!---->
  </div>
</div>
`;

exports[`render option icon 1`] = `
<div class="van-dropdown-menu van-hairline--top-bottom">
  <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title van-dropdown-menu__title--down" style="color: rgb(25, 137, 250);"><div class="van-ellipsis">A</div></span></div>
  <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title"><div class="van-ellipsis">A</div></span></div>
  <div class="van-dropdown-item van-dropdown-item--down" style="z-index: 10; top: 0px;">
    <div class="van-overlay" style="z-index: 2004; position: absolute; animation-duration: 0.2s;" name="van-fade"></div>
    <div class="van-popup van-popup--top van-dropdown-item__content" style="transition-duration: 0.2s;" name="van-popup-slide-top">
      <div class="van-cell van-cell--clickable" style="color: rgb(25, 137, 250);"><i class="van-icon van-icon-success van-cell__left-icon">
          <!----></i>
        <div class="van-cell__title"><span>A</span></div>
        <div class="van-cell__value"><i class="van-icon van-icon-success van-dropdown-item__icon" style="color: rgb(25, 137, 250);">
            <!----></i></div>
      </div>
      <div class="van-cell van-cell--clickable"><i class="van-icon van-icon-success van-cell__left-icon">
          <!----></i>
        <div class="van-cell__title"><span>B</span></div>
      </div>
    </div>
  </div>
  <div class="van-dropdown-item van-dropdown-item--down" style="z-index: 10; top: 0px; display: none;">
    <!---->
  </div>
</div>
`;

exports[`show dropdown item 1`] = `
<div class="van-dropdown-menu van-hairline--top-bottom">
  <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title van-dropdown-menu__title--down" style="color: rgb(25, 137, 250);"><div class="van-ellipsis">A</div></span></div>
  <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title"><div class="van-ellipsis">A</div></span></div>
  <div class="van-dropdown-item van-dropdown-item--down" style="z-index: 10; top: 0px;">
    <div class="van-overlay" style="z-index: 2000; position: absolute; animation-duration: 0.2s;" name="van-fade"></div>
    <div class="van-popup van-popup--top van-dropdown-item__content" style="transition-duration: 0.2s;" name="van-popup-slide-top">
      <div class="van-cell van-cell--clickable" style="color: rgb(25, 137, 250);">
        <div class="van-cell__title"><span>A</span></div>
        <div class="van-cell__value"><i class="van-icon van-icon-success van-dropdown-item__icon" style="color: rgb(25, 137, 250);">
            <!----></i></div>
      </div>
      <div class="van-cell van-cell--clickable">
        <div class="van-cell__title"><span>B</span></div>
      </div>
    </div>
  </div>
  <div class="van-dropdown-item van-dropdown-item--down" style="z-index: 10; top: 0px; display: none;">
    <!---->
  </div>
</div>
`;

exports[`show dropdown item 2`] = `
<div class="van-dropdown-menu van-hairline--top-bottom">
  <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title" style=""><div class="van-ellipsis">A</div></span></div>
  <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title van-dropdown-menu__title--down" style="color: rgb(25, 137, 250);"><div class="van-ellipsis">A</div></span></div>
  <div class="van-dropdown-item van-dropdown-item--down" style="z-index: 10; top: 0px;">
    <div class="van-popup van-popup--top van-dropdown-item__content" style="transition-duration: 0s; display: none;" name="van-popup-slide-top">
      <div class="van-cell van-cell--clickable" style="color: rgb(25, 137, 250);">
        <div class="van-cell__title"><span>A</span></div>
        <div class="van-cell__value"><i class="van-icon van-icon-success van-dropdown-item__icon" style="color: rgb(25, 137, 250);">
            <!----></i></div>
      </div>
      <div class="van-cell van-cell--clickable">
        <div class="van-cell__title"><span>B</span></div>
      </div>
    </div>
  </div>
  <div class="van-dropdown-item van-dropdown-item--down" style="z-index: 10; top: 0px;">
    <div class="van-overlay" style="z-index: 2001; position: absolute; animation-duration: 0.2s;" name="van-fade"></div>
    <div class="van-popup van-popup--top van-dropdown-item__content" style="transition-duration: 0.2s;" name="van-popup-slide-top">
      <div class="van-cell van-cell--clickable" style="color: rgb(25, 137, 250);">
        <div class="van-cell__title"><span>A</span></div>
        <div class="van-cell__value"><i class="van-icon van-icon-success van-dropdown-item__icon" style="color: rgb(25, 137, 250);">
            <!----></i></div>
      </div>
      <div class="van-cell van-cell--clickable">
        <div class="van-cell__title"><span>B</span></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`show dropdown item 3`] = `
<div class="van-dropdown-menu van-hairline--top-bottom">
  <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title" style=""><div class="van-ellipsis">A</div></span></div>
  <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title" style=""><div class="van-ellipsis">A</div></span></div>
  <div class="van-dropdown-item van-dropdown-item--down" style="z-index: 10; top: 0px;">
    <div class="van-popup van-popup--top van-dropdown-item__content" style="transition-duration: 0s; display: none;" name="van-popup-slide-top">
      <div class="van-cell van-cell--clickable" style="color: rgb(25, 137, 250);">
        <div class="van-cell__title"><span>A</span></div>
        <div class="van-cell__value"><i class="van-icon van-icon-success van-dropdown-item__icon" style="color: rgb(25, 137, 250);">
            <!----></i></div>
      </div>
      <div class="van-cell van-cell--clickable">
        <div class="van-cell__title"><span>B</span></div>
      </div>
    </div>
  </div>
  <div class="van-dropdown-item van-dropdown-item--down" style="z-index: 10; top: 0px;">
    <div class="van-overlay" style="z-index: 2001; position: absolute; animation-duration: 0.2s; display: none;" name="van-fade"></div>
    <div class="van-popup van-popup--top van-dropdown-item__content" style="transition-duration: 0.2s; display: none;" name="van-popup-slide-top">
      <div class="van-cell van-cell--clickable" style="color: rgb(25, 137, 250);">
        <div class="van-cell__title"><span>A</span></div>
        <div class="van-cell__value"><i class="van-icon van-icon-success van-dropdown-item__icon" style="color: rgb(25, 137, 250);">
            <!----></i></div>
      </div>
      <div class="van-cell van-cell--clickable">
        <div class="van-cell__title"><span>B</span></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`title prop 1`] = `
<div class="van-dropdown-menu van-hairline--top-bottom">
  <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title"><div class="van-ellipsis">Title</div></span></div>
  <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title"><div class="van-ellipsis">Title</div></span></div>
  <div class="van-dropdown-item van-dropdown-item--down" style="z-index: 10; top: 0px; display: none;">
    <!---->
  </div>
  <div class="van-dropdown-item van-dropdown-item--down" style="z-index: 10; top: 0px; display: none;">
    <!---->
  </div>
</div>
`;

exports[`toggle method 1`] = `
<div class="van-dropdown-menu van-hairline--top-bottom">
  <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title van-dropdown-menu__title--down" style="color: rgb(25, 137, 250);"><div class="van-ellipsis"></div></span></div>
  <div class="van-dropdown-item van-dropdown-item--down" style="z-index: 10; top: 0px;">
    <div class="van-overlay" style="z-index: 2014; position: absolute; animation-duration: 0s;" name="van-fade"></div>
    <div class="van-popup van-popup--top van-dropdown-item__content" style="transition-duration: 0s; z-index: 2015;" name="van-popup-slide-top"></div>
  </div>
</div>
`;

exports[`toggle method 2`] = `
<div class="van-dropdown-menu van-hairline--top-bottom">
  <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title" style=""><div class="van-ellipsis"></div></span></div>
  <div class="van-dropdown-item van-dropdown-item--down" style="z-index: 10; top: 0px;">
    <div class="van-popup van-popup--top van-dropdown-item__content" style="transition-duration: 0s; z-index: 2015; display: none;" name="van-popup-slide-top"></div>
  </div>
</div>
`;
